# pfultibot-trk

./: .gitignore  Dockerfile  README.md  analyze_database.py  authenticate_telegram.py  backfill_unparsed_messages.py  bot.py  check_database.py  check_raw_messages.py  collect_all_messages.py  env.example  find_channels.py  monitor.py  pyproject.toml  railway.json  requirements.txt  test_excel_integration.py  test_parser_fix.py  the idea.txt  view_database.py  view_messages.py
.github/workflows/: placeholder-check.yml
src/: __init__.py  enricher.py  listener.py  main.py  metrics.py  parser.py  session_manager.py  settings.py
src/storage/: __init__.py  excel.py  multi.py  sheet.py  sqlite.py
tests/: __init__.py  test_backfill.py  test_basic_messages.py  test_discovery_parser.py  test_filter.py  test_integration.py  test_new_format.py  test_parser.py  test_real_message.py
tests/unit/: test_listener.py  test_listener_integration.py  test_listener_reliability.py  test_multi_storage.py  test_parser.py  test_storage.py
